# LAr_Particle_Profiles

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile.common  run_profile.C  setup.sh
ProfileMakers/: CMakeLists.txt  ProfileMaker.C  ProfileMaker.h  ProfileMakerCore.C  ProfileMakerCore.h  ProfileMakers_LinkDef.h  canvas_margin.C  canvas_margins.C  canvas_margins.h  dEdx_functions.C  dEdx_functions.h  makefile
ProfileMakers/include/: ProfileMaker.h  ProfileMakerCore.h  ProfileMakers_LinkDef.h  dEdx_functions.h
ProfileMakers/src/: ProfileMaker.C  ProfileMakerCore.C  dEdx_functions.C
fitter/: Muon_beam_fit.C
plotter/: Draw_BeamSample.C  Draw_HypFit_Performance.C  Draw_PionXsec_plots.C  Draw_bestfit.C  Draw_range_fit_result.C  Fit_Beam_P.C  Fitting_Eloss_range.C  LanGausFit.C  mylib.h
plotter/Control_plots/: Draw_FakeData.C
plotter/KEScale/: KEScale.C  mylib.h
plotter/beam_study/: Convert_Spectrometer_Bias.C  Draw_Beam_Scraper.C  Draw_MC_vs_Data.C  Fit_Beam_KE_loss.C  Fitting_Eloss_range.C  LanGausFit.h  mylib.h
plotter/daughter_study/: Draw_Daughter_Plots.C
plotter/true_study/: Fitting_deltaEQE.C
python/: PrintToDoLists.py
xsec/: Draw_Xsec.C  mylib.h
